--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -82,14 +82,52 @@ month={Apr},
 pages={730–732}
 }
 
-@Misc{Giorgini1996,
-title = {JPL's On-Line Solar System Data Service},
-author = {Giorgini, J.D. and Yeomans, D.K. and Chamberlin, A.B. and others},
-howpublished = {BULLETIN OF THE AMERICAN ASTRONOMICAL SOCIETY (BAAS)},
-year = {1996},
-volume = {28},
-number = {13},
-pages = {1158}
+@PhdThesis{Gurola1995,
+author = {Gurrola, Eric Michael},
+title = {\href{http://adsabs.harvard.edu/abs/1995PhDT........12G}{Interpretation of Radar Data from the Icy Galilean Satellites and Triton}},
+url={http://adsabs.harvard.edu/abs/1995PhDT........12G},
+school = {STANFORD UNIVERSITY},
+year = {1995},
+}
+
+@INPROCEEDINGS{Giorgini1996,
+   author = {{Giorgini}, J.~D. and {Yeomans}, D.~K. and {Chamberlin}, A.~B. and others},
+    title = {\href{http://adsabs.harvard.edu/abs/1996DPS....28.2504G}{JPL's On-Line Solar System Data Service}},
+booktitle = {AAS/Division for Planetary Sciences Meeting Abstracts \#28},
+     year = 1996,
+   series = {Bulletin of the American Astronomical Society},
+   volume = 28,
+    month = sep,
+    pages = {1158},
+   adsurl = {http://adsabs.harvard.edu/abs/1996DPS....28.2504G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Olkin1997,
+title={\href{http://dx.doi.org/10.1006/icar.1997.5757}{The Thermal Structure of Triton’s Atmosphere: Results from the 1993 and 1995 Occultations}},
+volume={129},
+url={http://dx.doi.org/10.1006/icar.1997.5757},
+DOI={10.1006/icar.1997.5757},
+number={1},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Olkin, C.B. and Elliot, J.L. and Hammel, H.B. and others},
+year={1997},
+month={Sep},
+pages={178–201}
+}
+
+@INPROCEEDINGS{Sicardy1998,
+   author = {Sicardy, B. and Mousis, O. and Beisker, W. and others},
+    title = {\href{http://adsabs.harvard.edu/abs/1998DPS....30.4902S}{Structure of Triton's atmosphere from the occultation of Tr176}},
+booktitle = {AAS/Division for Planetary Sciences Meeting Abstracts \#30},
+     year = 1998,
+   series = {Bulletin of the American Astronomical Society},
+   volume = 30,
+    month = sep,
+    pages = {1107},
+   adsurl = {http://adsabs.harvard.edu/abs/1998DPS....30.4902S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Thomas2000,
@@ -356,20 +394,6 @@ year={2007},
 pages={483–502}
 }
 
-@article{Assafin2008,
-title={\href{http://dx.doi.org/10.1016/j.pss.2007.05.030}{Instrumental and digital coronagraphy for the observation of the Uranus satellites’ upcoming mutual events}},
-volume={56},
-url={http://dx.doi.org/10.1016/j.pss.2007.05.030},
-DOI={10.1016/j.pss.2007.05.030},
-number={14},
-journal={Planetary and Space Science},
-publisher={Elsevier BV},
-author={Assafin, M. and Campos, R.P. and Vieira Martins, R. and others},
-year={2008},
-month={Nov},
-pages={1882–1887}
-}
-
 @Article{Carry2008,
 title={\href{http://dx.doi.org/10.1051/0004-6361:20078166}{Near-infrared mapping and physical properties of the dwarf-planet Ceres}},
 volume={478},
@@ -382,6 +406,20 @@ author={Carry, B. and Dumas, C. and Fulchignoni, M. and others},
 year={2008},
 month={Jan},
 pages={235–244}
+}
+
+@article{Assafin2009,
+title={\href{http://dx.doi.org/10.1088/0004-6256/137/4/4046}{OBSERVATIONS AND ANALYSIS OF MUTUAL EVENTS BETWEEN THE URANUS MAIN SATELLITES}},
+volume={137},
+url={http://dx.doi.org/10.1088/0004-6256/137/4/4046},
+DOI={10.1088/0004-6256/137/4/4046},
+number={4},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Assafin, M. and Vieira-Martins, R. and Braga-Ribas, F. and others},
+year={2009},
+month={Mar},
+pages={4046–4053}
 }
 
 @Article{Widemann2009,
@@ -439,11 +477,16 @@ month={Oct},
 pages={493–496}
 }
 
-@InProceedings{Assafin2011,
-author = {Assafin, M and others},
-booktitle = {Gaia follow-up network for the solar system objects: Gaia FUN-SSO workshop proceedings. IMCCE-Paris Observatory, Paris},
-year = {2011},
-page = {85},
+@INPROCEEDINGS{Assafin2011,
+   author = {{Assafin}, M. and {Vieira Martins}, R. and {Camargo}, J.~I.~B. and others},
+    title = {\href{http://adsabs.harvard.edu/abs/2011gfun.conf...85A}{PRAIA - Platform for Reduction of Astronomical Images Automatically}},
+booktitle = {Gaia follow-up network for the solar system objects : Gaia FUN-SSO workshop proceedings, held at IMCCE -Paris Observatory, France, November 29 - December 1, 2010 / edited by Paolo Tanga, William Thuillot.- ISBN 2-910015-63-7, p. 85-88},
+     year = 2011,
+   editor = {{Tanga}, P. and {Thuillot}, W.},
+    month = jun,
+    pages = {85-88},
+   adsurl = {http://adsabs.harvard.edu/abs/2011gfun.conf...85A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{Nogueira2011,
@@ -560,7 +603,7 @@ DOI={10.1051/0004-6361/201322579},
 journal={Astronomy and Astrophysics},
 publisher={EDP Sciences},
 author={Camargo, J. I. B. and Vieira-Martins, R. and Assafin, M. and others},
-year={2013},
+year={2014},
 month={Dec},
 pages={A37}
 }
